src/test/ui/recursion_limit/invalid_macro.stderr
error: malformed `recursion_limit` attribute input
  --> $DIR/invalid_macro.rs:1:1
   |
LL | #![recursion_limit = foo!()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#![recursion_limit = "N"]`

error: aborting due to previous error

